# clash-of-bits

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  data.rs  find.rs  load_sigs.rs  main.rs  scrape_four_bytes.rs  tokenize.rs
src/markov/: markov.rs  mod.rs  tokenize.rs
src/sigs/: load_sigs.rs  mod.rs  scrape_four_bytes.rs  utils.rs
src/utils/: cli.rs
