[package]
name = "clash_of_bits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
reqwest = { version = "0.11.11", features = ["blocking"] }
tokio = { version = "1.21.0", features = ["full"] }
rand = "0.8.5"
serde = "1.0.144"
serde_json = "1.0.85"
clap = { version = "3.2.20", features = ["derive"] }
